Corrections in homework ot the week2