@@ -1,96 +1,95 @@
-/*
+
 public class HomeworkWeek2Task5 {
     public static void main (String[] args) {
         //Упаковка
         byte a = 13;
-        Byte boxed;
-        boxed = new Byte(a);                       //через конструктор
-        boxed = Byte.valueOf(a);                  //через метод .valueOf(a)
-        boxed = a;                               //автоматическая
+        Byte boxed1;
+        boxed1 = new Byte(a);                       //через конструктор
+        boxed1 = Byte.valueOf(a);                  //через метод .valueOf(a)
+        boxed1 = a;                               //автоматическая
 
         short b = 555;
-        Short boxed;
-        boxed = new Short(b);                      //через конструктор
-        boxed = Short.valueOf(b);                 //через метод .valueOf(a)
-        boxed = b;                               //автоматическая
+        Short boxed2;
+        boxed2 = new Short(b);                      //через конструктор
+        boxed2 = Short.valueOf(b);                 //через метод .valueOf(a)
+        boxed2 = b;                               //автоматическая
 
         int c = 777;
-        Integer boxed;
-        boxed = new Integer(c);                    //через конструктор
-        boxed = Integer.valueOf(c);               //через метод .valueOf(a)
-        boxed = c;                               //автоматическая
+        Integer boxed3;
+        boxed3 = new Integer(c);                    //через конструктор
+        boxed3 = Integer.valueOf(c);               //через метод .valueOf(a)
+        boxed3 = c;                               //автоматическая
 
         long d = 1234567890L;
-        Long boxed;
-        boxed = new Long(d);                       //через конструктор
-        boxed = Long.valueOf(d);                  //через метод .valueOf(a)
-        boxed = d;                               //автоматическая
+        Long boxed4;
+        boxed4 = new Long(d);                       //через конструктор
+        boxed4 = Long.valueOf(d);                  //через метод .valueOf(a)
+        boxed4 = d;                               //автоматическая
 
         double e = 1.2572468;
-        Double boxed;
-        boxed = new Double(e);                     //через конструктор
-        boxed = Double.valueOf(e);                //через метод .valueOf(a)
-        boxed = e;                               //автоматическая
+        Double boxed5;
+        boxed5 = new Double(e);                     //через конструктор
+        boxed5 = Double.valueOf(e);                //через метод .valueOf(a)
+        boxed5 = e;                               //автоматическая
 
         float f = 1.25F;
-        Float boxed;
-        boxed = new Float(f);                      //через конструктор
-        boxed = Float.valueOf(f);                 //через метод .valueOf(a)
-        boxed = f;                               //автоматическая
+        Float boxed6;
+        boxed6 = new Float(f);                      //через конструктор
+        boxed6 = Float.valueOf(f);                 //через метод .valueOf(a)
+        boxed6 = f;                               //автоматическая
 
         char g = '\u044B';
-        Character boxed;
-        boxed = Character(g);                      //через конструктор
-        boxed = Character.valueOf(g);             //через метод .valueOf(a)
-        boxed = g;                               //автоматическая
+        Character boxed7;
+        boxed7 = Character(g);                      //через конструктор
+        boxed7 = Character.valueOf(g);             //через метод .valueOf(a)
+        boxed7 = g;                               //автоматическая
 
         boolean h = true;
-        Boolean boxed;
-        boxed = new Boolean(h);                    //через конструктор
-        boxed = Boolean.valueOf(h);               //через метод .valueOf(a)
-        boxed = h;                               //автоматическая
+        Boolean boxed8;
+        boxed8 = new Boolean(h);                    //через конструктор
+        boxed8 = Boolean.valueOf(h);               //через метод .valueOf(a)
+        boxed8 = h;                               //автоматическая
 
 
         //Распаковка
-        Byte boxed = 13;
-        byte a;
-        a = boxed.byteValue();                   //через методы
-        a = boxed;                               //автоматическая
+        Byte boxed9 = 13;
+        byte i;
+        i = boxed9.byteValue();                   //через методы
+        i = boxed9;                               //автоматическая
 
-        Short boxed = 555;
-        short b;
-        b = boxed.shortValue();                   //через методы
-        b = boxed;                               //автоматическая
+        Short boxed10 = 555;
+        short j;
+        j = boxed10.shortValue();                   //через методы
+        j = boxed10;                               //автоматическая
 
-        Integer boxed = 777;
-        int c;
-        c = boxed.intValue();                     //через методы
-        c = boxed;                               //автоматическая
+        Integer boxed11 = 777;
+        int k;
+        k = boxed11.intValue();                     //через методы
+        k = boxed11;                               //автоматическая
 
-        Long boxed = 1234567890L;
-        long d;
-        d = boxed.longValue();                    //через методы
-        d = boxed;                               //автоматическая
+        Long boxed12 = 1234567890L;
+        long l;
+        l = boxed12.longValue();                    //через методы
+        l = boxed12;                               //автоматическая
 
-        Double boxed = 1.2572468;
-        double e;
-        e = boxed.doubleValue();                  //через методы
-        e = boxed;                               //автоматическая
+        Double boxed13 = 1.2572468;
+        double m;
+        m = boxed13.doubleValue();                  //через методы
+        m = boxed13;                               //автоматическая
 
-        Float boxed = 1.25F;
-        float f;
-        f = boxed.floatValue();                   //через методы
-        f = boxed;                               //автоматическая
+        Float boxed14 = 1.25F;
+        float n;
+        n = boxed14.floatValue();                   //через методы
+        n = boxed14;                               //автоматическая
 
-        Character boxed = '\u044B';
-        char g;
-        g = boxed.charValue();                    //через методы
-        g = boxed;                               //автоматическая
+        Character boxed15 = '\u044B';
+        char o;
+        o = boxed15.charValue();                    //через методы
+        o = boxed15;                               //автоматическая
 
-        Boolean = true;
-        boolean h;
-        h = boxed.booleanValue();                 //через методы
-        h = boxed;                               //автоматическая
+        Boolean boxed16 = true;
+        boolean p;
+        p = boxed16.booleanValue();                 //через методы
+        p = boxed16;                               //автоматическая
     }
 }
-*/
